syntax = "proto3";

package pb;
option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message ForgotPasswordRequest {
    string username = 1;
}

message ForgotPasswordResponse {
    bool successful = 1;
}